umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_2-methylpropene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h2#v2"
      - "C#v4"
      - "C#h3#v"
      - "C#h3#v"
    bonds:
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Ce
    atoms:
      - "C#h2#v2"
      - "C#v4"
      - "C#h3#v"
      - "C#h3#v"
    bonds:
      - "="
      - "-"
      - "-"
