umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_bicyclo-1.1.0-butane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 5
    topology: C|
    atoms:
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 5
    topology: C|
    atoms:
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
