umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_bicyclo-2.2.2-octane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 8
    bond_count: 9
    topology: GwCCGk
    atoms:
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 8
    bond_count: 9
    topology: GwCCGk
    atoms:
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH1v3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
